--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -1,2 +1,3 @@
 <h1>Edit Project</h1>
+<p><span class="hint">Make changes to the project below. Remember to click the <strong>Update Project</strong> button at the bottom after making any updates (e.g. uploading photos, picking videos, deleting quotes) so that they are saved.</span></p>
 <%= render 'form' %>
