--- a/app/assets/stylesheets/our_ethos.css.scss
+++ b/app/assets/stylesheets/our_ethos.css.scss
@@ -6,8 +6,14 @@ body#c-pages-a-our_ethos {
 
   #sushislider {
 
+
+
     li.item {
       cursor: default;
+      &, * {
+        opacity:inherit;
+        filter:inherit;
+      }
     }
 
     h1 {
@@ -17,7 +23,7 @@ body#c-pages-a-our_ethos {
     }
 
     .inner {
-      display:table;
+//      display:table;
       padding: 10px 10px 10px 20px;
       @include grid(4);
       background: image-url('pngs/black_bg.png');
@@ -28,7 +34,10 @@ body#c-pages-a-our_ethos {
     }
 
     .inner_container {
-      display: table-cell;
+      position: absolute;
+      z-index: 99999;
+
+//      display: table-cell;
       vertical-align:middle;
     }
 
