--- a/app/views/pages/our_ethos.html.erb
+++ b/app/views/pages/our_ethos.html.erb
@@ -5,15 +5,17 @@
   <a id="next" href="#">Next</a>
   <div class="wrapper">
     <div id="inner_wrapper">
+
+      <div class="inner_container">
+        <div class="inner">
+          <h1>aa</h1>
+          <div class="description">bb</div>
+        </div>
+      </div>
+
     <ul>
       <% Ethos.all.each_with_index do |ethos,index| %>
-      <li class="item" style="background: url(<%= ethos.image.url if ethos.image.present? %>)" data-index="<%= index %>">
-        <div class="inner_container">
-          <div class="inner">
-            <h1><%= ethos.headline %></h1>
-            <%= simple_format ethos.description %>
-          </div>
-        </div>
+      <li class="item" style="background: url(<%= ethos.image.url if ethos.image.present? %>)" data-index="<%= index %>" data-headline="<%= ethos.headline %>" data-description="<%= simple_format ethos.description %>">
       </li>
       <% end %>
     </ul>
