--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -43,7 +43,7 @@ a { outline: 0 !important; border: 0; }
 a:focus { outline: 0; }
 
 /* Improve readability when focused and hovered in all browsers: h5bp.com/h */
-a, a:visited, a:focus, a:hover, a:active { outline: 0; border: 0; }
+a, a:visited, a:focus, a:hover, a:active { outline: 0; }
 
 
 /* =============================================================================
