--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class="field">
       <%= f.label :description %><%= mark_required(@project, :description) %>
-      <%= f.text_area :description %>
+      <%= f.text_area :description, rows: 8 %>
     </div>
   </fieldset>
 
