--- a/app/assets/stylesheets/our_ethos.css.scss
+++ b/app/assets/stylesheets/our_ethos.css.scss
@@ -6,8 +6,6 @@ body#c-pages-a-our_ethos {
 
   #sushislider {
 
-
-
     li.item {
       cursor: default;
       &, * {
@@ -20,6 +18,7 @@ body#c-pages-a-our_ethos {
       margin: 0;
       font-size: 3em;
       padding: 0;
+      line-height: 1.4em;
     }
 
     .inner {
@@ -29,8 +28,9 @@ body#c-pages-a-our_ethos {
       background: image-url('pngs/black_bg.png');
       background: rgba(0,0,0,0.4);
       margin: 0;
-      margin-top: 120px;
+      margin-top: 110px;
       width: 600px;
+      line-height: 1.5em;
     }
 
     .inner_container {
