--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -44,6 +44,10 @@ ul#services {
     .description {
       bottom: 1px;
       font-size: 1em;
+      p {
+        margin: 0;
+        padding: 0;
+      }
     }
   }
 }
