--- a/app/views/admin/services/_form.html.erb
+++ b/app/views/admin/services/_form.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="field"><%= mark_required(@service, :description) %>
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, rows: 7 %>
   </div>
   <div class="field"><%= mark_required(@service, :image) %>
     <%= f.label :image %><br />
