--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
       <% @projects.each do |project| %>
         <% quote = project.quotes.first(:order => "RANDOM()") %>
 
-        <li class="item" style="background-image: url(<%= project.frontpage_image %>)" data-url="<%= project_path(project) %>" data-who="<%= project.who %>" data-name="<%= project.name %>" data-what="<%= project.what %>" data-where="<%= project.where %>" data-quote="<%= simple_format "‘#{truncate quote.body, length: 170}’" if quote %>" data-quote-author="<%= quote.author if quote %>" data-quote-organisation="<%= quote.organisation if quote %>" >
+        <li class="item" style="background-image: url(<%= project.frontpage_image %>)" data-url="<%= project_path(project) %>" data-who="<%= project.who %>" data-name="<%= project.name %>" data-what="<%= project.what %>" data-when="<%= project.when %>" data-where="<%= project.where %>" data-quote="<%= simple_format "‘#{truncate quote.body, length: 170}’" if quote %>" data-quote-author="<%= quote.author if quote %>" data-quote-organisation="<%= quote.organisation if quote %>" >
           <!--<h2>Management Event 2012</h2>-->
         </li>
       <% end %>
@@ -33,7 +33,8 @@
         </span>
         <dl>
           <dt>Who</dt><dd id="project_who"></dd>
-          <dt>When</dt><dd id="project_where"></dd>
+          <dt>Where</dt><dd id="project_where"></dd>
+          <dt>When</dt><dd id="project_when"></dd>
           <dt>What</dt><dd id="project_what"></dd>
         </dl>
       </div>
