--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -62,8 +62,8 @@ body#c-pages-a-home {
         filter:inherit;
 //        background-color: black;
         }
-      dt { color: $blue;}
-      dl{ display: block; position: absolute; bottom: 60px; }
+      dt { color: $blue; margin-top: 4px;}
+      dl{ display: block; position: absolute; bottom: 60px;}
 
   //    padding: 10px;
       float: right;
