--- a/app/assets/stylesheets/activity.css.scss
+++ b/app/assets/stylesheets/activity.css.scss
@@ -1,76 +1,88 @@
-li.video {
-  width: 100%;
-  height: 320px;
-  background: black image-url('loading.gif') center center no-repeat;
-  margin-bottom: 15px;
-//  iframe { display: none;}
-}
+#c-activity-a-index {
 
-// Place all the styles related to the Activity controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 
-h3.activity_filter {
-  color: #DDD;
-}
 
-ul,li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+  // Place all the styles related to the Activity controller here.
+  // They will automatically be included in application.css.
+  // You can use Sass (SCSS) here: http://sass-lang.com/
 
-img.twitter_media {
-  width: 100%;
-}
+  h3.activity_filter {
+    color: #DDD;
+  }
 
-ul#social_columns > li {
+  #main {
 
-  .video {
+  ul,li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  li.video {
     width: 100%;
-    height: 300px;
+    height: 320px;
     background: black image-url('loading.gif') center center no-repeat;
     margin-bottom: 15px;
   //  iframe { display: none;}
   }
-
-  h2 {
-    display:block;
-    background-repeat: no-repeat;
-    background-image: image-url('bigsocial.png');
-    width:48px;
-    height:48px;
-    @extend .hide_text;
   }
 
-  &.facebook {
-    @include grid(1);
-    h2 { background-position: -52px -52px; }
+  img.twitter_media {
+    width: 100%;
   }
 
-  &.youtube {
-    @include grid(3);
-    h2 { background-position: -2px -2px; }
+  ul#social_columns > li {
+
+    .video {
+      width: 100%;
+      height: 300px;
+      background: black image-url('loading.gif') center center no-repeat;
+      margin-bottom: 15px;
+    //  iframe { display: none;}
+    }
+
+    h2 {
+      display:block;
+      background-repeat: no-repeat;
+      background-image: image-url('bigsocial.png');
+      width:48px;
+      height:48px;
+      @extend .hide_text;
+      margin-bottom: 15px;
+    }
+
+    &.facebook {
+      @include grid(1);
+      h2 { background-position: -52px -52px; }
+    }
+
+    &.youtube {
+      @include grid(3);
+      h2 { background-position: -2px -2px; }
+    }
+
+    &.twitter {
+      @include grid(1);
+      h2 { background-position: -2px -52px; }
+    }
+
+    .title {
+      color: $blue;
+      font-size: .9em;
+      margin-bottom: 10px;
+      display: block;
+    }
+    p {
+      margin: .2em;
+    }
+
+    & li {
+      border-bottom: 1px solid $blue;
+      padding: 8px 0;
+    }
+    & li:last-child {
+      border-bottom: none;
+    }
   }
 
-  &.twitter {
-    @include grid(1);
-    h2 { background-position: -2px -52px; }
-  }
-
-  .title {
-    color: $blue;
-    font-size: .9em;
-  }
-  p {
-    margin: .2em;
-  }
-
-  & li {
-    border-bottom: 1px solid $blue;
-    padding: 8px 0;
-  }
-  & li:last-child {
-    border-bottom: none;
-  }
 }
