--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,15 @@
 .clearfix:after { clear: both; }
 .clearfix { *zoom: 1; }
 
+//ul,li {
+//
+//margin: 0;
+//
+//padding: 0;
+//
+//  list-style: none;
+//}
+
 p {
   margin: 1em 0;
 }
