--- a/app/assets/stylesheets/sushislider.scss
+++ b/app/assets/stylesheets/sushislider.scss
@@ -1,7 +1,7 @@
 #sushislider {
-  ul {
-    width: auto;
-  }
+//  ul {
+//    width: auto;
+//  }
   h1 {
     line-height: 1.5em;
     position: relative;
