--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <div id="player_container"><div id="player"></div></div>
     <% project = Project.first %>
 
-    <h1>hello</h1>
+    <h1>Loading...</h1>
     <ul>
       <% @projects.each do |project| %>
         <% quote = project.quotes.first(:order => "RANDOM()") %>
