--- a/app/views/pages/our_ethos.html.erb
+++ b/app/views/pages/our_ethos.html.erb
@@ -8,7 +8,7 @@
 
       <div class="inner_container">
         <div class="inner">
-          <div class="headline">Headline</div>
+          <div class="headline bold">Headline</div>
           <div class="description">Description</div>
         </div>
       </div>
