--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,8 +48,12 @@ $break-large: 1200px;
 @include font-face('Formata', '/assets/Formata-Regular');
 @include font-face('FormataMedium', '/assets/Formata-Medium');
 @include font-face('FormataItalic', '/assets/Formata-Italic');
-
 @mixin bold { font-family: FormataMedium, Tahoma, Arial, sans-serif; font-weight: normal; }
+
+.bold {
+  @include bold;
+}
+
 @mixin italic { font-family: FormataItalic, Tahoma, Arial, sans-serif; font-style: italic; }
 
 $column-width: 160px !default;
@@ -377,3 +381,7 @@ a {
 a:active, a:selected, a:visited { border: none !important; outline: none !important; }
 
 @import "sushislider";
+
+.login_container {
+  @include grid(5);
+}
