--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "modernizr" %>
   <%= csrf_meta_tags %>
+
+  <!--[if IE]>
+  <style type="text/css" media="screen">
+    .bold, h1, h2, h3, h4, h5, h6 { font-weight: bold !important; }
+  </style>
+  <![endif]-->
 </head>
 <body id="c-<%= controller_name %>-a-<%= action_name %>">
 
@@ -33,7 +39,7 @@
       </div>
 
       <div id="contact_details">
-        <div id="telephone_number">Call us on 0161 402 3271</div>
+        <div id="telephone_number" class="bold">Call us on 0161 402 3271</div>
         <span>to see how UrbanLites can light up your event.</span>
         <span>Alternatively, send us an email to <%= mail_to "chris@urbanlites.com", "chris@urbanlites.com" %></span>
       </div>
@@ -43,11 +49,11 @@
   <nav>
     <div class="container">
     <ul>
-      <li><%= link_to "Projects", projects_path %></li>
-      <li><%= link_to "Services", services_path %></li>
-      <li><%= link_to "Our Ethos", our_ethos_path %></li>
-      <li><%= link_to "Activity", activity_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
+      <li><%= link_to "Projects", projects_path, class: 'bold' %></li>
+      <li><%= link_to "Services", services_path, class: 'bold' %></li>
+      <li><%= link_to "Our Ethos", our_ethos_path, class: 'bold' %></li>
+      <li><%= link_to "Activity", activity_path, class: 'bold' %></li>
+      <li><%= link_to "Contact", contact_path, class: 'bold' %></li>
     </ul>
     </div>
   </nav>
