--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
   <div class="wrapper">
     <div id="inner_wrapper">
     <div id="player_container"><div id="player"></div></div>
-    <% project = Project.first %>
+    <% project = @projects.first %>
 
     <h1>Loading...</h1>
     <ul>
