--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,10 +71,10 @@
     <div class="container">
       <div id="social_buttons">
       <ul>
-        <li class="twitter"><%= link_to "Twitter", 'http://twitter.com/urbanlites', title: 'Twitter' %></li>
-        <li class="facebook"><%= link_to "Facebook", 'https://www.facebook.com/pages/Urbanlites/187072201335959', title: 'Facebook' %></li>
-        <li class="youtube"><%= link_to "YouTube", 'http://youtube.com/urbanlites', title: 'YouTube' %></li>
-        <li class="flickr"><%= link_to "Flickr", 'http://flickr.com/urbanlites', title: 'Flickr' %></li>
+        <li class="twitter"><%= link_to "Twitter", 'http://twitter.com/urbanlites', title: 'Twitter', rel: 'me' %></li>
+        <li class="facebook"><%= link_to "Facebook", 'https://www.facebook.com/pages/Urbanlites/187072201335959', title: 'Facebook', rel: 'me' %></li>
+        <li class="youtube"><%= link_to "YouTube", 'http://www.youtube.com/user/urbanlitesuk', title: 'YouTube', rel: 'me' %></li>
+        <!--<li class="flickr"><%= link_to "Flickr", 'http://flickr.com/urbanlites', title: 'Flickr' %></li>-->
       </ul>
       </div>
 
