--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,6 +4,7 @@
 <div id="projects">
 
 <% @projects.each_with_index do |project,index| %>
+<%= cycle '<div class="clear"></div>','' %>
 <div id="<%= dom_id project %>" class="project" data-url="<%= project_path(project) %>">
   <div class="inner">
 
