--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -385,3 +385,8 @@ a:active, a:selected, a:visited { border: none !important; outline: none !import
 .login_container {
   @include grid(5);
 }
+
+.clear {
+  display: block;
+  clear: both;
+}
