--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -21,6 +21,10 @@
       <%= f.text_field :what, style: 'width: 300px' %>
     </div>
     <div class="field">
+      <%= f.label :when %><%= mark_required(@project, :when) %>
+      <%= f.date_select :when, order: [:month, :year] %>
+    </div>
+    <div class="field">
       <%= f.label :description %><%= mark_required(@project, :description) %>
       <%= f.text_area :description, rows: 8 %>
     </div>
