added jcrop css and changed twitter url

--- a/app/views/application/_twitter.html.erb
+++ b/app/views/application/_twitter.html.erb
@@ -5,5 +5,5 @@
     <div id="twitter_bird"></div>
   </div>
   <span class="tweet_time">about <%= time_ago_in_words(Tweet.first.posted_at) if Tweet.first %> ago</span>
-  <span><%= link_to "Follow us on Twitter", 'http://twitter.com/bitsushi' %></span>
+  <span><%= link_to "Follow us on Twitter", 'http://twitter.com/urbanlites' %></span>
 </div>
