--- a/app/assets/stylesheets/activity.css.scss
+++ b/app/assets/stylesheets/activity.css.scss
@@ -26,6 +26,10 @@ img.twitter_media {
 
 ul#social_columns > li {
 
+  img {
+    margin: 10px;
+  }
+
   .video {
     width: 100%;
     height: 300px;
@@ -44,17 +48,18 @@ ul#social_columns > li {
   }
 
   &.facebook {
-    @include grid(1);
+    @include grid(2);
     h2 { background-position: -52px -52px; }
   }
 
   &.youtube {
+    display: none;
     @include grid(3);
     h2 { background-position: -2px -2px; }
   }
 
   &.twitter {
-    @include grid(1);
+    @include grid(3);
     h2 { background-position: -2px -52px; }
   }
 
